step02-2 03 collect(Collectors.toList()) -> toList로 변경