@@ -5,7 +5,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Repository
 public class InMemoryProductRepository implements ProductRepository{
@@ -40,7 +39,7 @@ public class InMemoryProductRepository implements ProductRepository{
         return productMap.values().stream()
                          .sorted(Comparator.comparingInt(Product::getPopularityScore).reversed())
                          .limit(10)
-                         .collect(Collectors.toList());
+                         .toList();
     }
 
 
